update 336 java